# threelanterns

./: .env.example  .gitignore  README.md  Start Three Lanterns UI.command  Stop Three Lanterns UI.command  pyproject.toml
app/: __init__.py  config.py  constants.py  database.py  enums.py  main.py  schemas.py
app/api/: deps.py
app/models/: __init__.py  base.py  core.py
app/services/: __init__.py  artifacts.py  audit.py  dedupe.py  extraction.py  intake.py  quality.py  records.py  review.py  schema.py  search.py  translation.py  tuning.py  utils.py  validation.py  witness.py
app/static/: style.css
app/templates/: audit.html  base.html  intake.html  jobs.html  record.html  review_list.html  review_metrics.html  review_reprocess_jobs.html  search.html  tuning.html  tuning_run.html  tuning_source.html  witness_group_detail.html  witness_groups.html
app/web/: __init__.py  routes.py
app/workers/: __init__.py  run_worker.py
docs/three-lanterns/: 01_mission_scope.md  02_corpus_strategy.md  03_data_dictionary_v0.md  04_ritual_ontology_v0.md  05_workflows_pseudocode.md  06_validation_and_acceptance.md  milestone-2-acceptance.md  milestone-2-runbook.md  milestone-3-acceptance.md  milestone-3-plan.md  (+1 more)
migrations/: 001_initial.sql  002_m3_intake_scale.sql  003_r31_translation_quality.sql  004_r32_passage_quality_and_reprocess_reasons.sql  005_tuning_console.sql  006_witness_groups.sql
scripts/: backfill_passage_quality.py  daily_m3_report.py  migrate.py  requeue_dead_letter.py  run_m2_cycle.py  run_r3a_cycle.py
tests/: conftest.py  helpers.py
(+43 files in other folders)
